--- a/my-bti/package.json
+++ b/my-bti/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
     "@hookform/resolvers": "^3.3.2",
+    "@motionone/utils": "^10.16.3",
     "@mui/icons-material": "^5.14.16",
     "@mui/joy": "^5.0.0-beta.15",
     "@mui/material": "^5.14.17",
