--- a/my-bti/package.json
+++ b/my-bti/package.json
@@ -19,6 +19,7 @@
     "@mui/joy": "^5.0.0-beta.15",
     "@mui/material": "^5.14.17",
     "@mui/styled-engine-sc": "^6.0.0-alpha.5",
+    "@next/third-parties": "^14.1.0",
     "@reduxjs/toolkit": "^1.9.7",
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.4",
